<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.tang.mylock.MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/string_users"
        android:gravity="center"
        android:textSize="20sp"/>
    <ListView
        android:id="@+id/list_users"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/button_add_user"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:onClick="onAddUser"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/button_add_guest"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_guest"
            android:onClick="onAddGuest"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_delete_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_all"
        android:onClick="onDeleteAll"
        android:background="@color/colorPrimaryDark"/>
</LinearLayout>
