<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_guest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tang.mylock.AddGuest"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_local_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_local_port"
        android:hint="@string/local_ip"
        android:gravity="center"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/text_local_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_receive"
        android:hint="@string/local_port"
        android:gravity="center"
        android:inputType="number"/>
    <Button
        android:id="@+id/button_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/button_recieve"
        android:background="@color/colorPrimaryDark"
        android:onClick="onReceive"/>
</RelativeLayout>
